# fdp-rust-manifest

./: README.md
app-c-corrosion/: main.c
app-c-corrosion/rustui/: README.md
app-c-corrosion/rustui copy/: Cargo.toml  build.rs
app-c-corrosion/rustui copy/src/: lib.rs
app-c-corrosion/rustui copy/src_old/: implementation.rs  lib.rs
app-c-corrosion/rustui/src/: implementation.rs
app-c-corrosion/rustui/src_old/: bindings.rs
app-c-diplomat/: CMakeLists.txt  main.c  main.h
app-c-diplomat/rustui/: Cargo.toml  build.rs
app-c-diplomat/rustui/c/: RandomCounter.h  RandomNumberWrapper.h
app-c-diplomat/rustui/src/: lib.rs
app-python-venv/: main.py  requirements.txt
app-rust/: Cargo.toml
app-rust/src/: main.rs
benchmarks/: .gitignore  bench.sh  benchmark_results.json
examples/asyncapi/: 1_message.yaml  30_message.yaml  5_message.yaml
fdp-core/: Cargo.toml  benchmark_results.json
fdp-core/fdp-common/: Cargo.toml
fdp-core/fdp-common/src/: graph.rs  info.rs  lib.rs  mqtt.rs
fdp-core/fdp-common/src/parsing/: definition.rs  file.rs  mod.rs  modules.rs  tests.rs
fdp-core/fdp-definition/: .gitignore  Cargo.toml
fdp-core/fdp-definition/doc/: app_1_5.md  app_2.dot  app_3.md  app_3_30.md
fdp-core/fdp-definition/src/: lib.rs
fdp-core/fdp-definition/src/apps/: app_1.rs  app_1_30.rs  app_1_5.rs  app_2.rs  app_2_30.rs  app_2_5.rs  mod.rs
fdp-core/fdp-definition/src/doc/: app_1.md  app_1_30.md  app_2_30.md  app_2_5.md
fdp-core/fdp-macros/: Cargo.toml
fdp-core/fdp-macros/src/: lib.rs
fdp-core/fdp-macros/tests/: macros.rs
fdp-core/fdp-macros/tests/pass/: message_macro.rs  reply_macro.rs
fdp-core/fdp-macros/tests/pass/extract/: simple_module.rs
fdp-core/fdp-mqtt-client/: Cargo.toml  README.md
fdp-core/fdp-mqtt-client/src/: lib.rs
mqtt-client/: Cargo.toml  README.md
mqtt-client/src/: event_dispatcher.rs  lib.rs  mqtt_client.rs
