[package]
name = "mqtt-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
rumqttc = "0.24.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full", "test-util"] }
