[package]
name = "fdp"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
fdp-common = { path = "../fdp-common" }
trybuild = "1.0.99"

[dev-dependencies]
fdp-common = { path = "../fdp-common" }
serde = { version = "1.0.197", features = ["derive"] }
schemars = "0.8.16"
